game board and structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
 	</head>
 	<body>
 		<div class="game-wrapper">
-			<h1>Pong</h1>
+			<h1>Pong FTW</h1>
 			<div id="game"></div>
-			<!-- Rough-out your SVG mark-up here to start... -->
+				<svg preserveAspectRatio:"none" Version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="512px" height="256px" viewbox="0 0 512 256"> 
+					
+				  <rect id="board" x="0px" y="0px" width=512px height=256px fill="grey"/>
+
+					<rect id="p1" x="10"  y="100" width="8px" height="56px" fill="blue"/>
+
+					<rect id="p2" x="494"  y="100" width="8px" height="56px" fill="blue"/>
+
+					<line id="centreLine" x1="256" y1="0" x2="256" y2="256" stroke-dasharray="5" stroke="green" stroke-width="2"/>
+					
+					<circle id="ball" cx="256" cy="128"  r="8px" fill="red"/>
+
+
+
+        </svg>
 		</div>
 		<script type="text/javascript" src="build/bundle.js"></script>
 	</body>
